--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,8 @@
       display: flex;
       justify-content: center;
       align-self: center;
-      padding-left: 0; }
+      padding-left: 0;
+      color: white; }
 
 .card__background--verde {
   background: #649C8B;
@@ -158,7 +159,7 @@
 
 h3, pre {
   position: relative;
-  color: white;
+  color: #CECFCF;
   text-shadow: #788695 0.1em 0.1em 0.2em;
   font-size: 2vw;
   font-style: italic; }
@@ -176,7 +177,7 @@ h2 {
   font-style: italic; }
 
 .footer {
-  background: #C3D1BA;
+  background: #CECFCF;
   width: 100%;
   height: 9vw;
   min-height: 120px;
@@ -188,7 +189,12 @@ h2 {
     display: flex;
     padding: 1rem; }
     .footer .footer__icon:hover {
-      color: #19926A; }
+      color: white;
+      transition: 0.5s;
+      -webkit-transition: 0.5s;
+      -moz-transition: 0.5s;
+      -ms-transition: 0.5s;
+      -o-transition: 0.5s; }
   .footer .fa-solid, .footer .fa-brands {
     font-size: 3vw; }
   .footer .footer__autor {
@@ -242,3 +248,87 @@ h2 {
       font-style: italic; }
     .card4 .card4__background .noindex {
       font-size: 2vw; }
+
+/*aqui empieza la seccion de contactos*/
+.contenedor {
+  margin: 96px auto 40px;
+  width: 330px;
+  background-color: #19926A; }
+  .contenedor .contactos--titulo {
+    width: 235px;
+    margin: -14px auto 16px;
+    font-size: 1.7em;
+    line-height: 38px;
+    text-align: center;
+    bottom: 50%;
+    text-transform: uppercase; }
+  .contenedor .description {
+    text-align: center;
+    margin: 0 10px 68px;
+    bottom: 50%; }
+
+.form-container {
+  border-radius: 10px;
+  padding: 24px;
+  box-shadow: 0 6px 0 var(--Blue-Shadow); }
+
+input {
+  width: 100%;
+  height: 55px;
+  margin-bottom: 18px;
+  border-radius: 4px;
+  border: 1px solid var(--Grayish-Blue);
+  padding-left: 20px;
+  font-weight: 700;
+  font-family: 'Poppins', sans-serif;
+  outline: none; }
+
+input[type="submit"] {
+  background-color: #CECFCF;
+  color: white;
+  text-transform: uppercase;
+  font-size: 1em;
+  font-weight: 400;
+  border: none;
+  box-shadow: 0 3px 0 var(--Green-Shadow); }
+  input[type="submit"]:hover {
+    cursor: pointer;
+    background-color: white;
+    color: #19926A; }
+
+.terminos {
+  font-size: 0.70em;
+  margin: 0 14px;
+  text-align: center; }
+
+.terminos a {
+  text-decoration: none;
+  font-weight: 1rem; }
+
+@media (min-width: 1120px) {
+  .contenedor {
+    display: flex;
+    width: 1114px; }
+  section:nth-child(1) {
+    padding-top: 200px;
+    width: 570px; }
+  section:nth-child(2) {
+    width: 540px; }
+  .contactos--titulo {
+    margin-left: 0;
+    font-size: 3em;
+    width: 414px;
+    line-height: 55px;
+    margin-bottom: 30px; }
+  .description {
+    text-align: left; } }
+
+/*aqui empieza la seccion de galeria*/
+main .carousel .carousel-inner .carousel-item .carousel--texto {
+  color: white;
+  font-size: 1.8rem; }
+
+/*aqui empieza la seccion de servicios*/
+main .conteiner-fluid .compromiso {
+  background: #649C8B;
+  text-align: center; }
